--- a/js_level1_scale/index.html
+++ b/js_level1_scale/index.html
@@ -6,7 +6,7 @@
     <title>다이어트 체중계</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/scale.css">
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/scale.js" defer></script>
 </head>
 <body>
     <main>
@@ -15,11 +15,11 @@
         <ul class="info">
             <li>
                 <span>현재 키 :</span>
-                <input type="number" name="user_height">
+                <input type="number" name="user_height" value="0">
             </li>
             <li>
                 <span>현재 몸무게 :</span>
-                <input type="number" name="user_weight">
+                <input type="number" name="user_weight" value="0">
             </li>
         </ul>
         <button type="button" id="result_btn">적정체중결과보기</button>
