다이어트 체중계산 디자인

--- a/js_level1_scale/index.html
+++ b/js_level1_scale/index.html
@@ -22,6 +22,9 @@
                 <input type="number" name="user_weight" value="0">
             </li>
         </ul>
+        <div class="diet_img">
+            <img src="./images/img1.jpg" alt="">
+        </div>
         <button type="button" id="result_btn">적정체중결과보기</button>
         <p id="result"><!-- 결과출력위치 --></p>
     </main>
