--- a/js_level1_portfolio/index.html
+++ b/js_level1_portfolio/index.html
@@ -34,7 +34,7 @@
     <!-- 디자인 목록 클릭 시 출력되는 팝업 결과 -->
     <div class="popup_bg"><!-- 검은색 배경 -->
         <div class="content"><!-- 실제보이는영역(스크롤) -->
-            <img src="" alt=""><!-- 이미지src js적용위치 -->
+            <img src="./images/project_011.jpg" alt=""><!-- 이미지src js적용위치 -->
         </div>
     </div>
 </body>
