오늘의집 상품주문 HTML CSS

--- a/js_basic/boolean.html
+++ b/js_basic/boolean.html
@@ -47,10 +47,84 @@
         if(10 > 2){
             console.log('조건이 참일 때 실행되는 문구');
         }
-        
+        console.log('============5/25 조건문 공부');
+        //if(조건식){ 조건식 결과가 참일 때 실행되는 스크립트 }
+        //const userId = prompt('아이디를 입력하세요');
+        /* if(userId){
+            alert(userId+'님 안녕하세요');
+        } */
+        //관리자 아이디 : admina
+        //관리자만 인식해서 인사하는 조건 알고리즘
+        /* if(userId == 'admin'){
+            alert('관리자님 어서오세요');
+        } */
+        //관리자가 아닌 사림이 접속하면 일반 사용자로 판단해서 인사하는 알고리즘
+        //'회원님 안녕하세요'
+        /* if(userId != 'admin'){
+            alert('회원님 안녕하세요');
+        } */
     </script>
 </head>
 <body>
-    
+    <div id="join">
+        <input type="text" name="user_id" placeholder="아이디를 입력하세요">
+        <button type="button" id="id_overlap_btn">아이디중복확인</button>
+        <p class="overlap_error_msg"><!-- 오류메세지 출력위치 --></p>
+    </div>
+    <!--
+    관리자와 동일한 아이디를 할 수 없는 아이디 중복확인 알고리즘
+    1. 사용자가 아이디를 입력했다.
+    2. 아이디중복확인 버튼을 클릭했다.
+    3. 만약 사용자가 입력한 아이디가 'admin'이라면
+    4. 오류메세지가 출력됨. "사용중인 아이디 입니다. 다른아이디를 입력하세요"
+    -->
+    <div class="print">
+        <input type="number" value="1" class="page_num">
+        <button type="button" id="print_btn">인쇄</button>
+    </div>
+    <!-- 
+    2장 이상 입력 후 인쇄버튼 클릭 시 인쇄가능 window.print()
+    그 이하일 경우 '최소 2장 이상부터 인쇄가 가능합니다.' 경고메세지출력
+    -->
+    <script>
+        //관리자와 동일한 아이디를 할 수 없는 아이디 중복확인 알고리즘
+        const userId = document.querySelector('input[name=user_id]');
+        const idOverlapBtn = document.querySelector('#id_overlap_btn');
+        const overlapMsg = document.querySelector('.overlap_error_msg');
+        console.log(userId,idOverlapBtn,overlapMsg);
+        //버튼을 클릭 했을때 중복아이디를 확인하고 싶은 경우
+        idOverlapBtn.addEventListener('click',idCheck);/* 클릭했을때 */
+        function idCheck() {
+            //console.log('test'); //중간중간 console로 오류 확인하기
+            console.log(userId.value);//value -> 값 / html에서 input의 초기값 세팅
+            //아이디를 입력했을때 관리자 아이디와 같을때
+            if(userId.value == 'admin'){
+                return overlapMsg.textContent = "사용중인 아이디입니다. 다른아이디를 입력하세요";
+                //textcontent->텍스트를 입력했을때
+            }
+            //아이디를 입력하지 않았을때
+            if(userId.value == ""){
+                return overlapMsg.textContent = "아이디가 입력되지 않았습니다. 아이디를 입력하세요";
+                //return을 만나면 함수로 끝난다. 더이상 동작이 되지 않는다.
+                //if가 동시에 동작되지 않고 순차적으로 동작된다.
+            }
+        }
+        //인쇄 알고리즘
+        const pageNum = document.querySelector('.page_num');
+        const printBtn = document.querySelector('#print_btn');
+        console.log(pageNum,printBtn);
+        //버튼을 클릭 했을때 인쇄가 가능한지 확인하고 싶을때
+        printBtn.addEventListener('click',printCheck);
+        function printCheck(){
+            //console.log('test');
+            console.log(pageNum.value);
+            if(pageNum.value >= '2'){
+                print();//window생략가능
+            }
+            if(pageNum.value <= '2'){
+                return alert('최소 2장 이상부터 인쇄가 가능합니다.')//window에 명령에 뜨기
+            }
+        }
+    </script>
 </body>
 </html>
