오늘의집 구매수량 작업중

--- a/js_level2_ohou/index.html
+++ b/js_level2_ohou/index.html
@@ -11,7 +11,15 @@
 </head>
 <body>
     <main>
-        <div class="path">반려동물 > 강아지 > 강아지 패션 > 패딩 아우터</div>
+        <div class="path">
+            <a href="#">반려동물</a>
+            <span>&gt;</span><!-- &gt; -->
+            <a href="#">강아지</a>
+            <span>&gt;</span><!-- &gt; -->
+            <a href="#">강아지 패션</a>
+            <span>&gt;</span><!-- &gt; -->
+            <a href="#">패션 아우터</a>
+        </div>
         <section>
             <div class="left_thumnail">
                 <div class="small"><!-- 작은 이미지 -->
@@ -28,7 +36,7 @@
             <div class="right_order">
                 <p class="brand">울리</p>
                 <h1>몽쉘 패딩 하네스 올인원 6size 3colors</h1>
-                <a class="review">
+                <a href="#review" class="review">
                     <span class="score">
                         <em>★</em>
                         <em>★</em>
@@ -56,8 +64,8 @@
                 <div class="product_option">
                     <select name="color"><!-- 그룹용도 -->
                         <option value="">색상</option>
-                        <option value="black">블랙(39,900d원)</option>
-                        <option value="raspberry">라즈베리(39,900d원)</option>
+                        <option value="black">블랙(39,900원)</option>
+                        <option value="raspberry">라즈베리(39,900원)</option>
                     </select>
                     <select name="size"><!-- 그룹용도 -->
                         <option value="">사이즈</option>
@@ -65,6 +73,21 @@
                         <option value="sm">SM(39,900)</option>
                         <option value="m">M(39,900)</option>
                     </select>
+                <!-- JS에서 select클릭 시 출력되는 영역 시작 -->
+                <div class="order_select">
+                    <p class="list">
+                        색상:<em class="color">블랙</em>
+                        색상:<em class="size">S</em>
+                    </p>
+                    <a href="#" class="close">X</a>
+                    <div class="order_num">
+                        <button type="button" id="minus">-</button>
+                        <input type="number" value="1" name="user_num">
+                        <button type="button" id="plus">+</button>
+                    </div>
+                    <p class="price"><em>39,900</em></p>
+                </div>
+                <!-- JS에서 select클릭 시 출력되는 영역 끝-->
                 </div>
                 <div class="total">
                     <p>주문금액</p>
@@ -76,6 +99,9 @@
                 </div>
             </div>
         </section>
+        <section class="info">상품정보</section>
+        <section id="review">리뷰</section>
+        <section class="board">문의</section>
     </main>
 </body>
 </html>
