과제풀이 + 조건문 else if까지

--- a/task_birthday_flower/index.html
+++ b/task_birthday_flower/index.html
@@ -6,28 +6,18 @@
     <title>탄생화꽃말 | JS</title>
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/flower.css">
+    <script src="./scripts/data.js" defer></script>
     <script src="./scripts/flower.js" defer></script>
 </head>
 <body>
     <main>
-        <div class="grup">
-            <ul class="info">
-                <li>
-                    <input type="number" name="user_year">
-                    <span>년</span>
-                </li>
-                <li>
-                    <input type="number" name="user_month">
-                    <span>월</span>
-                </li>
-                <li>
-                    <input type="number" name="user_day">
-                    <span>일</span>
-                </li>
-            </ul>
-            <button type="button" id="result_btn">탄생화와 꽃말은?</button>
-            <p id="result"><!-- 결과출력위치 --></p>
+        <div class="data">
+            <input type="number" name="user_year">년
+            <input type="number" name="user_month">월
+            <input type="number" name="user_day">일
         </div>
+        <button type="button" id="result_btn">탄생화와 꽃말은?</button>
+        <p id="total"><!-- 결과출력위치 --></p>
     </main>
 </body>
 </html>
