--- a/scrollTrigger/banyatree/index.html
+++ b/scrollTrigger/banyatree/index.html
@@ -73,6 +73,11 @@
                 },
                 duration:3,//지속시간
                 opacity:1,
+            },{
+                ScrollTrigger:{
+                    trigger:'.txt h1',
+                    
+                }
             })
         });
 
